[package]
name = "tarjousbot"
version = "0.1.0"
authors = ["Lassi Säike"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0.118", features = ["derive"] }
tokio = "1.0.1"

[profile.release]
lto = true
codegen-units = 1
